[package]
name = "hfptm"
version = "0.1.0"
edition = "2021"
authors = ["HFTPM Team"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6.0"
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
thiserror = "2.0"
anyhow = "1.0"
config = "0.15"
toml = "0.8"
once_cell = "1.20"
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
urlencoding = "2.1"
sha2 = "0.10"

polymarket-client-sdk = "0.1.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hex = "0.4"
tracing-appender = "0.2"
alloy = { version = "1.1", features = ["signer-local"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

tikv-jemallocator = { version = "0.5", optional = true }
regex = "1.12.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0

[[bin]]
name = "sw_arb_sim"
path = "src/bin/sw_arb_sim.rs"

[[bin]]
name = "latency_test"
path = "src/bin/latency_test.rs"

[[bin]]
name = "debug_wallet"
path = "src/bin/debug_wallet.rs"
